--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="icon" href="./icon.jpg">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
         <div class="head_part1">
             <img loading="lazy" class="logo" src="./logo.png" alt="SK">
             <nav class="nav">
-                <h2><a href="">About Me</a></h2>
-                <h2><a href="">Project</a></h2>
-                <h2><a href="">Let’s Talk <i class="fa-solid fa-arrow-up-long"></i></a></h2>
+                <h2><a href="#about">About Me</a></h2>
+                <h2><a href="#project">Project</a></h2>
+                <h2><a href="https://wa.me/9361888647">Let’s Talk <i class="fa-solid fa-arrow-up-long"></i></a></h2>
             </nav>
         </div>
         <div class="hero">
@@ -40,7 +41,7 @@
             <img loading="lazy" class="rocket_fly" src="./rocket_fly.gif" alt="rocket">
         </div>
     </header>
-    <div class="about">
+    <div id="about" class="about">
         <div class="about_part1">
             <h1 class="section">About</h1>
             <p class="section">I’m a dedicated Software Developer focused on creating efficient, user-friendly
@@ -84,7 +85,7 @@
             </div>
         </div>
     </div>
-    <div class="projects">
+    <div id="project" class="projects">
         <h1 class="section" >Projects</h1>
         <div class="project_part section">
             <div class="description">
