--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <p class="section">I’m a dedicated Software Developer focused on creating efficient, user-friendly
                 solutions. I enjoy turning ideas into impactful digital experiences and continuously improving through
                 learning and building.</p>
-            <h2 class="section"><a download href="./resume_kamaleshprabu_softwaredeveloper.pdf">Resume <i class="fa-solid fa-circle-down"></i></a></h2>
             <div class="social">
                 <a class="section" href=""><i class="fa-brands fa-linkedin"></i></a>
                 <a class="section" href=""><i class="fa-brands fa-github"></i></a>
                 <a class="section" href=""><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a class="section" download href="./resume_kamaleshprabu_softwaredeveloper.pdf">Resume <i class="fa-solid fa-circle-down"></i></a>
             </div>
         </div>
         <div class="about_part2">
