--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 solutions. I enjoy turning ideas into impactful digital experiences and continuously improving through
                 learning and building.</p>
             <div class="social">
-                <a class="section" href=""><i class="fa-brands fa-linkedin"></i></a>
-                <a class="section" href=""><i class="fa-brands fa-github"></i></a>
+                <a class="section" href="https://www.linkedin.com/in/kamaleshprabu-shanmugam-152721303"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="section" href="https://github.com/Kamaleshprabu"><i class="fa-brands fa-github"></i></a>
                 <a class="section" href=""><i class="fa-brands fa-square-x-twitter"></i></a>
                 <a class="section" download href="./resume_kamaleshprabu_softwaredeveloper.pdf">Resume <i class="fa-solid fa-circle-down"></i></a>
             </div>
