--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <p>HTML, CSS and JavaScript</p>
                         </div>
                         <div class="link">
-                            <a href="snehasbeautyparlour.in">Live Demo</a>
+                            <a href="https://snehasbeautyparlour.in">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                             <p>HTML, CSS and JavaScript</p>
                         </div>
                         <div class="link">
-                            <a href="gpafindertool.netlify.app">Live Demo</a>
+                            <a href="https://gpafindertool.netlify.app/">Live Demo</a>
                         </div>
                     </div>
                 </div>
