--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <p>HTML, CSS, JavaScript, PHP, Laravel, Blade and MySQL</p>
                         </div>
                         <div class="link">
-                            <a href="https://github.com/Kamaleshprabu/real-estate-project">Git Repo</a>
+                            <a href="https://github.com/Kamaleshprabu/real-estate-project">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                             <p>HTML, CSS, JavaScript, PHP and MySQl</p>
                         </div>
                         <div class="link">
-                            <a href="https://github.com/Kamaleshprabu/dashboard_in_core_php">Git Repo</a>
+                            <a href="https://github.com/Kamaleshprabu/dashboard_in_core_php">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                             <p>HTML, CSS, JavaScript, PHP, Laravel, Blade and MySql</p>
                         </div>
                         <div class="link">
-                            <a href="https://github.com/Kamaleshprabu/premium_subscription_system">Git Repo</a>
+                            <a href="https://github.com/Kamaleshprabu/premium_subscription_system">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                             <p>HTML, CSS and JavaScript</p>
                         </div>
                         <div class="link">
-                            <a href="https://snehasbeautyparlour.in">Live Demo</a>
+                            <a href="https://snehasbeautyparlour.in">Live</a>
                         </div>
                     </div>
                 </div>
