--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="head_part1">
             <img loading="lazy" class="logo" src="./logo.png" alt="SK">
             <nav class="nav">
@@ -286,6 +286,9 @@
             </div>
             <img loading="lazy" class="section" src="./arstro_on_moon.gif" alt="arstro_on_moon">
         </div>
+    </div>
+    <div class="scroll_btn">
+        <a href="#header"><i class="fa-solid fa-arrow-up-long"></i></a>
     </div>
     <h2 class="end_line">Developed By 🌕 kamalesh Prabu 🌑</h2>
     <script src="./portfolio.js"></script>
