--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
     <div id="about" class="about">
         <div class="about_part1">
             <h1 class="section">About</h1>
-            <p class="section">I’m a dedicated Software Developer focused on creating efficient, user-friendly
-                solutions. I enjoy turning ideas into impactful digital experiences and continuously improving through
-                learning and building.</p>
+            <p class="section">I’m a dedicated Software Developer passionate about building efficient, user-friendly solutions. I enjoy turning ideas into impactful digital experiences and continuously strive to grow by learning and building new things.</p>
             <div class="social">
                 <a class="section" href="https://www.linkedin.com/in/kamaleshprabu-shanmugam-152721303"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="section" href="https://github.com/Kamaleshprabu"><i class="fa-brands fa-github"></i></a>
