--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </div>
         <div class="mailbox">
             <h1>Mail me</h1>
-            <form>
+            <form onsubmit="sendMail(event)">
                 <div class="form_grp">
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name" required>
@@ -307,7 +307,7 @@
                     <label for="message">Message</label>
                     <textarea name="message" id="message" rows="4"></textarea>
                 </div>
-                <button type="submit" onclick="sendMail()">Send</button>
+                <button type="submit">Send</button>
             </form>
         </div>
         <div class="quote">
