--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="social">
                 <a class="section" href="https://www.linkedin.com/in/kamaleshprabu-shanmugam-152721303"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="section" href="https://github.com/Kamaleshprabu"><i class="fa-brands fa-github"></i></a>
-                <a class="section" href=""><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a class="section" href="https://x.com/TxcElmer?t=WGshwGmR8owdgnvzrbaaww&s=03"><i class="fa-brands fa-square-x-twitter"></i></a>
                 <a class="section" download href="./resume_kamaleshprabu_softwaredeveloper.pdf">Resume <i class="fa-solid fa-circle-down"></i></a>
             </div>
         </div>
