--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@
     </div>
     <h2 class="end_line">Developed By 🌕 kamalesh Prabu 🌑</h2>
     <script src="./portfolio.js"></script>
+        
+
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/05/15/15/20250515150343-FKS2UV8F.js"></script>
+       
 </body>
 
 </html>
