--- a/index.html
+++ b/index.html
@@ -289,25 +289,25 @@
             </div>
         </div>
         <div class="mailbox">
-            <h1>Mail me</h1>
+            <h1 class="section">Mail me</h1>
             <form onsubmit="sendMail(event)">
-                <div class="form_grp">
+                <div class="form_grp section">
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name" required>
                 </div>
-                <div class="form_grp">
+                <div class="form_grp section">
                     <label for="email">Your Email</label>
                     <input type="text" id="email" name="email" required>
                 </div>
-                <div class="form_grp">
+                <div class="form_grp section">
                     <label for="subject">Subject</label>
                     <input type="text" id="subject" name="subject" required>
                 </div>
-                <div class="form_grp">
+                <div class="form_grp section">
                     <label for="message">Message</label>
                     <textarea name="message" id="message" rows="4"></textarea>
                 </div>
-                <button type="submit">Send</button>
+                <button class="section" type="submit">Send</button>
             </form>
         </div>
         <div class="quote">
