--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
     </div>
     <div class="contact">
-        <h1>Contact</h1>
+        <h1 class="section">Contact</h1>
         <div class="contact_div">
             <div class="contact_part">
                 <div class="cell section">
